--- a/style.css
+++ b/style.css
@@ -6,5 +6,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #FFD5CC;
 }
+
